--- a/mean/views/create.ejs
+++ b/mean/views/create.ejs
@@ -1,9 +1,77 @@
 <%- layout('layout') %>
 <div>
     <h3><%- title %></h3>
-    <form class="form-inline" method="post" action="/event">
+    <form class="form" method="post" action="/event">
         <div class="form-group">
-            <input name="activity" placeholder="Activity Name" class="form-control" />
+            <label for="activity">Activity</label>
+            <select id="activity" name="activity">
+                <option></option>
+                <% for (var i = 0; i < data.length; i++) { %>
+                    <option value="<%- data[i].description %>"><%- data[i].description %></option>
+                <% } %>
+            </select>
+        </div>
+        <div class="form-group">
+            <h4>Date</h4>
+            <label for="day">Day</label>
+            <select id="day">
+                <option></option>
+            <% for (var i = 1; i <= 31; i++) { %>
+                <option><%- i %></option>
+            <% } %>
+            </select>
+            <label for="month">Month</label>
+            <select id="month">
+                <option></option>
+            <% for (var i = 1; i <= 12; i++) { %>
+                <option><%- i %></option>
+            <% } %>
+            </select>
+            <label for="year">Year</label>            
+            <select id="year">
+                <option></option> 
+            <% var currentYear = (new Date().getYear()) + 1900
+            for (var i = currentYear; i <= (currentYear + 5); i++) { %>
+                                                                                               
+                <option><%- i %></option>
+            <% } %>
+            </select>
+        </div>
+        <div class="form-group">
+            <h4>Start Time</h4>
+            <label for="startHour">hh</label>
+            <select id="startHour">
+                <option></option>
+            <% for (var i = 1; i <= 24; i++) { %>
+                <option><%- i %></option>
+            <% } %>
+            </select>
+            <span> : </span>
+            <label for="startMinutes">mm</label>
+            <select id="startMinutes">
+                <option>00</option>
+                <option>15</option>
+                <option>30</option>
+                <option>45</option>
+            </select>
+        </div>
+        <div class="form-group">
+            <h4>End Time</h4>
+            <label for="endHour">hh</label>
+            <select id="endHour">
+                <option></option>
+            <% for (var i = 1; i <= 24; i++) { %>
+                <option><%- i %></option>
+            <% } %>
+            </select>
+            <span> : </span>
+            <label for="endMinutes">mm</label>
+            <select id="endMinutes">
+                <option>00</option>
+                <option>15</option>
+                <option>30</option>
+                <option>45</option>
+            </select>
         </div>
         <input type="submit" value="Add Activity" class="btn btn-success" />
         <a href="/" class="btn btn-success">Cancel</a>
