--- a/mean/views/create.ejs
+++ b/mean/views/create.ejs
@@ -14,25 +14,30 @@
         <div class="form-group">
             <h4>Date</h4>
             <label for="day">Day</label>
-            <select id="day">
+            <select id="day" name="day">
                 <option></option>
             <% for (var i = 1; i <= 31; i++) { %>
+                <% if (i < 10) { %>                
+                <option>0<%- i %></option>
+                <% } else { %>
                 <option><%- i %></option>
-            <% } %>
+            <% }} %>
             </select>
             <label for="month">Month</label>
-            <select id="month">
+            <select id="month" name="month">
                 <option></option>
             <% for (var i = 1; i <= 12; i++) { %>
+                <% if (i < 10) { %>                
+                <option>0<%- i %></option>
+                <% } else { %>
                 <option><%- i %></option>
-            <% } %>
+            <% }} %>
             </select>
             <label for="year">Year</label>            
-            <select id="year">
+            <select id="year" name="year">
                 <option></option> 
             <% var currentYear = (new Date().getYear()) + 1900
-            for (var i = currentYear; i <= (currentYear + 5); i++) { %>
-                                                                                               
+            for (var i = currentYear; i <= (currentYear + 5); i++) { %>                                                                                               
                 <option><%- i %></option>
             <% } %>
             </select>
@@ -40,15 +45,18 @@
         <div class="form-group">
             <h4>Start Time</h4>
             <label for="startHour">hh</label>
-            <select id="startHour">
+            <select id="startHour" name="startHour">
                 <option></option>
-            <% for (var i = 1; i <= 24; i++) { %>
+            <% for (var i = 0; i <= 23; i++) { %>
+                <% if (i < 10) { %>                
+                <option>0<%- i %></option>
+                <% } else { %>
                 <option><%- i %></option>
-            <% } %>
+            <% }} %>
             </select>
             <span> : </span>
             <label for="startMinutes">mm</label>
-            <select id="startMinutes">
+            <select id="startMinutes" name="startMinutes">
                 <option>00</option>
                 <option>15</option>
                 <option>30</option>
@@ -58,20 +66,27 @@
         <div class="form-group">
             <h4>End Time</h4>
             <label for="endHour">hh</label>
-            <select id="endHour">
+            <select id="endHour" name="endHour">
                 <option></option>
             <% for (var i = 1; i <= 24; i++) { %>
+                <% if (i < 10) { %>                
+                <option>0<%- i %></option>
+                <% } else { %>
                 <option><%- i %></option>
-            <% } %>
+            <% }} %>
             </select>
             <span> : </span>
             <label for="endMinutes">mm</label>
-            <select id="endMinutes">
+            <select id="endMinutes" name="endMinutes">
                 <option>00</option>
                 <option>15</option>
                 <option>30</option>
                 <option>45</option>
             </select>
+        </div>
+        <div class="form=group">
+            <label for="active">Active?</label>
+            <input type="checkbox" id="active" name="active" />
         </div>
         <input type="submit" value="Add Activity" class="btn btn-success" />
         <a href="/" class="btn btn-success">Cancel</a>
