--- a/mean/views/delete.ejs
+++ b/mean/views/delete.ejs
@@ -2,19 +2,23 @@
 <div>
     <h3><%- title %></h3>
     <h4>Are you sure you want to delete the following activity?</h4>
-    <table>
-        <tr>
-            <td>Activity Name: </td>
-            <td><%= data.activity_name %></td>
-        </tr>
-        <tr>
-            <td>Date Created: </td>
-            <td><%= data.date_created %></td>
-        </tr>
-    </table>
+    <dl>        
+        <dt>Activity: </dt>
+            <dd><%= data.activity %></dd>
+        <dt>Date: </dt>
+            <dd><%= data.activity_start.toLocaleDateString() %></dd>        
+        <dt>Start Time: </dt>
+            <dd><%= data.activity_start.toLocaleTimeString() %></dd>                
+        <dt>End Time: </dt>
+            <dd><%= data.activity_end.toLocaleTimeString() %></dd>        
+        <dt>Date Created: </dt>
+            <dd><%= data.creation_date.toLocaleDateString() %></dd>
+        <dt>Is Active: </dt>
+            <dd><%= data.is_active %></dd>        
+    </dl>
     <form method="post" action="/delete" >
         <input type="hidden" name="_id" value="<%= data._id %>" />
-        <input type="submit" value="Delete Activity" class="btn btn-danger"/>
+        <input type="submit" value="Delete Event" class="btn btn-danger"/>
         <a href="/" class="btn btn-success">Cancel</a>
     </form>
 </div>
