--- a/mean/views/layout.ejs
+++ b/mean/views/layout.ejs
@@ -4,6 +4,7 @@
         <title><%- title %></title>
         <link href="/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
         <link href="/lib/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet" />
+        <link href="/app.css" rel="stylesheet" />
     </head>
     <body>
         <div class="container"><%- body %></div>
