--- a/angular/zenythangular/src/app/events/event-list/event-list.component.html
+++ b/angular/zenythangular/src/app/events/event-list/event-list.component.html
@@ -1,44 +1,13 @@
-<table class="table">
-
-    <tr *ngFor="let event of events_to_display">
-      <span *ngIf="!event.is_activity">
-        <td>{{event.activity_long_date}} </td>
-      </span>
-      <span *ngIf="event.is_activity">
-        <td>{{event.activity_start}} - {{event.activity_end}}</td>
-        <td >{{event.activity}}</td>
-      </span>
-    </tr>
-
-</table>
-
-<table class="table">
-  <thead class="thead-default">
-    <tr>
-      <th>#</th>
-      <th>First Name</th>
-      <th>Last Name</th>
-      <th>Username</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>@mdo</td>
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td>@fat</td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td>Larry</td>
-      <td>the Bird</td>
-      <td>@twitter</td>
-    </tr>
-  </tbody>
-</table>
+<div class="table_container">
+  <table class="table">
+    <tbody>
+      <tr *ngFor="let event of events_to_display">
+        <!--display day header-->
+        <td *ngIf="!event.is_activity" colspan="2" class="date_row">{{event.activity_long_date}} </td>
+        <!--display activity-->
+        <td *ngIf="event.is_activity" class="">{{event.activity_start}} - {{event.activity_end}}</td>
+        <td *ngIf="event.is_activity">{{event.activity}}</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
